Fixed White Space

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,6 @@ body {
   background-color: #6c78a9;
   height: 100vh;
   margin: 0;
-  overflow: hidden;
 }
 
 .backgroundCover {
@@ -100,12 +99,19 @@ body {
   height: 100%;
 }
 
-.hover-panel {
+.create-task-button {
   width: 100%;
   height: 100%;
   position: relative;
-  perspective: 800px;
+  margin-top: -5.8px;
+  background-color: #4CAF50;
+  color: #ffffff;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 3px gray;
   cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .panel {
@@ -125,17 +131,8 @@ body {
   transform: rotateX(180deg);
 }
 
-.create-task-button {
-  width: 100%;
-  height: 91%;
-  background-color: #4CAF50;
-  color: #ffffff;
-  border: none;
-  font-size: 16px;
-  font-weight: bold;
-  box-shadow: 0 0.2em gray;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.Task-Create {
+  position: relative;
 }
 
 .create-task-button:hover {
@@ -1106,6 +1103,8 @@ body {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
   width: 70%;
   height: 80%;
+  min-height: 700px;
+  min-width: 500px;
   z-index: 1;
 }
 
