--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,7 +11,6 @@ body {
   background-color: #6c78a9;
   height: 100vh;
   margin: 0;
-  overflow: hidden;
 }
 
 .backgroundCover {
