--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -73,12 +73,19 @@
   height: 100%;
 }
 
-.hover-panel {
+.create-task-button {
   width: 100%;
   height: 100%;
   position: relative;
-  perspective: 800px;
+  margin-top: -5.8px; // Rendering Issue
+  background-color: #4CAF50;
+  color: #ffffff;
+  border: none;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 3px gray;
   cursor: pointer;
+  transition: background-color 0.3s
 }
 
 .panel {
@@ -98,17 +105,8 @@
   transform: rotateX(180deg);
 }
 
-.create-task-button {
-  width: 100%;
-  height: 91%;
-  background-color: #4CAF50;
-  color: #ffffff;
-  border: none;
-  font-size: 16px;
-  font-weight: bold;
-  box-shadow: 0 .2em gray;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
+.Task-Create {
+  position: relative;
 }
 
 .create-task-button:hover {
