--- a/sass/layout/_task-board-layout.scss
+++ b/sass/layout/_task-board-layout.scss
@@ -8,6 +8,8 @@
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
   width: 70%;
   height: 80%;
+  min-height: 700px;
+  min-width: 500px;
   z-index: 1;
 }
 
